--- a/style.css
+++ b/style.css
@@ -1,9 +1,4 @@
-footer,header{
-    background-color: rgb(226, 148, 161);
-}
-a, span{
-    color: white;
-}
-section{
-    border: black solid;
+
+img{
+  width: 100%;
 }
