--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
-
-img{
-  width: 100%;
+/* Variables pour les couleurs principales */
+:root {
+  --primary-color: #003366; /* Bleu foncé pour le professionnalisme */
+  --secondary-color: #f4f4f4; /* Gris clair pour les arrière-plans */
+  --accent-color: #00aaff; /* Bleu clair pour les accents */
+  --text-color: #333333; /* Noir pour le texte */
 }
+
